# codeprompt_pro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentChat.tsx
scripts/: restart.ps1  start.ps1  stop.ps1
src/: __init__.py
src/agents/: __init__.py  code_agent.py  factory.py
src/agents/base/: __init__.py  base_agent.py
src/api/: main.py
src/api/routes/: agents.py
src/llm/: __init__.py  llm_gateway.py
src/llm/providers/: __init__.py  openai_provider.py
src/memory/: __init__.py  memory_manager.py
src/prompts/: __init__.py
src/prompts/templates/: __init__.py  code_generation.py
src/tools/: registry.py
